# PRISM

./: .gitignore  .gitmodules  README.md  digraph.dot  digraph2.dot  makefile  memo.md  sam_extension.cpp  udf1_extension.cpp
header_file/: CMakeLists.txt  Makefile  README.md  duckdb
header_file/src/: numeric.cpp  string.cpp  udf1_extension.cpp  udf_transpiler_extension.cpp
header_file/src/include/: aggify.hpp  cast.hpp  date.hpp  functions.hpp  numeric.hpp  string.hpp  udf1_extension.hpp  udf_transpiler_extension.hpp
header_file/test/nodejs/: udf_transpiler_test.js
header_file/test/python/: udf_transpiler_test.py
header_file/test/sql/: udf_transpiler.test
prism/: CMakeLists.txt  Makefile  README.md
prism/profiler/: CMakeLists.txt
prism/samples/: aggify.sql  aggify_test.sql  loops.sql  tpch_queries_flat.sql  tpch_udfs_no_func_calls.sql  unsupported.sql
prism/src/: aggify_pass.cpp  ast_to_cfg.cpp  cfg_code_generator.cpp  compiler.cpp  dominator_analysis.cpp  (+10 more)
transpiler/: CMakeLists.txt  Makefile
transpiler (without function)/: CMakeLists.txt  main copy.cpp  main.cpp
transpiler (without function)/dependencies/libduckdb-osx-universal/: duckdb.hpp
transpiler (without function)/dependencies/libpg_query/: Makefile
transpiler (without function)/dependencies/libpg_query/src/: pg_query_parse_plpgsql.c
transpiler/configs/: example.yaml
transpiler/src/: main.cpp  trans.cpp  udf_transpiler_extension.cpp
transpiler/src/dependencies/fmt/: CMakeLists.txt
transpiler/src/dependencies/fmt/src/: os.cc
transpiler/src/dependencies/libpg_query/: main.c
transpiler/src/dependencies/yaml-cpp/: CMakeLists.txt
transpiler/src/include/: trans.hpp  udf_transpiler_extension.hpp  utils.hpp
transpiler/test/nodejs/: udf_transpiler_test.js
transpiler/test/sql/: udf_transpiler.test
transpiler_no_function/: CMakeLists.txt  control.yaml  function.yaml  header_file.yaml  main.cpp  memo.md  query.yaml  utils.hpp
transpiler_no_function/dependencies/pretty-print/: CMakeLists.txt
transpiler_no_function/include/: query.hpp  trans.hpp  utils.hpp
transpiler_no_function/samples/: addnums.sql  conditions.sql  simple.sql  sudf_10_isListDistinct.sql  temp.py  tpch_queries.sql  tpch_udfs_no_func_calls.sql  unsupported.sql
transpiler_no_function/src/: bind.cpp  main.cpp  query.cpp  trans.cpp  utils.cpp
udf_transpiler/: .gitignore  CMakeLists.txt  Makefile  README.md
udf_transpiler/duckdb/: CMakeLists.txt
udf_transpiler/duckdb/src/core_functions/scalar/string/: instr.cpp  left_right.cpp  trim.cpp
udf_transpiler/duckdb/src/function/: scalar_function.cpp
udf_transpiler/duckdb/src/function/cast/: decimal_cast.cpp  default_casts.cpp  numeric_casts.cpp  string_cast.cpp
udf_transpiler/duckdb/src/function/scalar/operators/: arithmetic.cpp
udf_transpiler/duckdb/src/function/scalar/string/: concat.cpp  length.cpp  substring.cpp
udf_transpiler/duckdb/src/include/duckdb/function/: scalar_function.hpp
udf_transpiler/duckdb/src/include/duckdb/function/cast/: default_casts.hpp  vector_cast_helpers.hpp
udf_transpiler/duckdb/src/include/duckdb/main/: connection_manager.hpp
udf_transpiler/profiler/src/: udf1_extension.cpp
udf_transpiler/profiler/src/include/: udf1_extension.hpp
udf_transpiler/samples/: aggify.sql  aggify2.sql  header.sql  misc.sql  simple.sql  sudf_10_isListDistinct.sql  sudf_20b_getManufactComplex.sql  tpch_queries_original.sql  tpch_udfs.sql  udf-q19.sql  udf13.sql
udf_transpiler/src/: _trans.cpp_  aggify_code_generator.cpp  aggify_dfa.cpp  aggify_pass.cpp  assignment_elimination.cpp  ast_to_cfg.cpp  basic_block.cpp  break_phi_interference.cpp  cfg.cpp  cfg_code_generator.cpp  cfg_to_ast.cpp  compiler.cpp  copy_propagation.cpp  dead_code_elimination.cpp  dominator_dataflow.cpp  dominators.cpp  expression_propagation.cpp  file.cpp  function.cpp  instruction_elimination.cpp  instructions.cpp  jump_threading.cpp  liveness_analysis.cpp  liveness_dataflow.cpp  logical_operator_code_generator.cpp  merge_basic_blocks.cpp  merge_regions.cpp  outlining.cpp  predicate_analysis.cpp  query_motion.cpp  ssa_construction.cpp  ssa_destruction.cpp  trans.cpp  types.cpp  udf_transpiler_extension.cpp  use_def.cpp  use_def_analysis.cpp  used_variable_finder.cpp  utils.cpp
udf_transpiler/src/dependencies/fmt/: CMakeLists.txt
udf_transpiler/src/dependencies/fmt/include/compiler_fmt/: color.h  core.h  format-inl.h  format.h
udf_transpiler/src/dependencies/fmt/src/: fmt.cc  format.cc  os.cc
udf_transpiler/src/depr/: bind.cpp  bind.hpp  main.cpp  query.hpp  utils copy.hpp
udf_transpiler/src/include/: aggify_code_generator.hpp  aggify_dfa.hpp  aggify_pass.hpp  analysis.hpp  assignment_elimination.hpp  ast_to_cfg.hpp  basic_block.hpp  bitvector.hpp  break_phi_interference.hpp  cfg.hpp  cfg_code_generator.hpp  cfg_to_ast.hpp  compiler.hpp  copy_propagation.hpp  dataflow_framework.hpp  dead_code_elimination.hpp  dominator_analysis.hpp  dominator_dataflow.hpp  expression_printer.hpp  expression_propagation.hpp  file.hpp  fixpoint_pass.hpp  function.hpp  function_pass.hpp  instruction_elimination.hpp  instructions.hpp  jump_threading.hpp  liveness_analysis.hpp  liveness_dataflow.hpp  logical_operator_code_generator.hpp  logical_operator_printer.hpp  merge_basic_blocks.hpp  merge_regions.hpp  outlining.hpp  pipeline_pass.hpp  predicate_analysis.hpp  query_motion.hpp  region.hpp  remove_unused_variable.hpp  ssa_construction.hpp  (+8 more)
udf_transpiler/templates/: aggify.yaml  control.yaml  function.yaml  header_file.yaml  plpgsql.yaml  query.yaml
udf_transpiler/test/python/: udf_transpiler_test.py
udf_transpiler/test/sql/: udf_transpiler.test
udf_transpiler/udf_agg/scripts/: duckdb_command.txt
udf_transpiler/udf_agg/src/: include  udf1_extension.cpp
udf_transpiler/udf_template/: CMakeLists.txt  Makefile
udf_transpiler/udf_template/src/: udf1_extension.cpp
udf_transpiler/udf_template/src/include/: common.hpp  comparison.hpp  function_switch.hpp  functions.hpp  numeric.hpp  string.hpp
workload/: preparation.sql  workload.sql
workload2/: preparation.sql  workload.sql
(+31 files in other folders)
